cep/cep.sase/src/de/uniol/inf/is/odysseus/cep/sase/SaseParser.java
// $ANTLR 3.4 C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g 2013-06-13 17:19:09
 
/********************************************************************************** 
  * Copyright 2011 The Odysseus Team
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
	package de.uniol.inf.is.odysseus.cep.sase; 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class SaseParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALT", "AND", "AS", "ASSIGN", "AT", "AVG", "BBRACKETLEFT", "BBRACKETRIGHT", "BOOLEAN", "COMMA", "COMPAREOP", "COUNT", "CREATE", "DAY", "DIGIT", "DIVISION", "ENDS", "EQUALS", "FALSE", "FLOAT", "HOUR", "INTEGER", "LBRACKET", "LEFTCURLY", "LEN", "LETTER", "LOWER", "MAX", "MILLISECOND", "MIN", "MINUS", "MINUTE", "MULT", "NAME", "NEWLINE", "NONCONTROL_CHAR", "NOTSIGN", "NUMBER", "PARTITION_CONTIGUITY", "PATTERN", "PLUS", "POINT", "RBRACKET", "RETURN", "RIGHTCURLY", "SECOND", "SEQ", "SINGLEEQUALS", "SKIP_TILL_ANY_MATCH", "SKIP_TILL_NEXT_MATCH", "SPACE", "STREAM", "STRICT_CONTIGUITY", "STRING_LITERAL", "SUM", "TRUE", "UPPER", "VIEW", "WEEK", "WHERE", "WHITESPACE", "WITHIN", "AGGREGATION", "ASSIGNMENT", "ATTRIBUTE", "COMPAREEXPRESSION", "CREATEVIEW", "CURRENT", "ENDSAT", "FIRST", "IDEXPRESSION", "KATTRIBUTE", "KMEMBER", "KSTATE", "KTYPE", "MATHEXPRESSION", "MEMBER", "NOT", "PARAMLIST", "PREV", "QUERY", "STATE", "TERM", "TYPE", "WHEREEXPRESSION"
    };

    public static final int EOF=-1;
    public static final int ALT=4;
    public static final int AND=5;
    public static final int AS=6;
    public static final int ASSIGN=7;
    public static final int AT=8;
    public static final int AVG=9;
    public static final int BBRACKETLEFT=10;
    public static final int BBRACKETRIGHT=11;
    public static final int BOOLEAN=12;
    public static final int COMMA=13;
    public static final int COMPAREOP=14;
    public static final int COUNT=15;
    public static final int CREATE=16;
    public static final int DAY=17;
    public static final int DIGIT=18;
    public static final int DIVISION=19;
    public static final int ENDS=20;
    public static final int EQUALS=21;
    public static final int FALSE=22;
    public static final int FLOAT=23;
    public static final int HOUR=24;
    public static final int INTEGER=25;
    public static final int LBRACKET=26;
    public static final int LEFTCURLY=27;
    public static final int LEN=28;
    public static final int LETTER=29;
    public static final int LOWER=30;
    public static final int MAX=31;
    public static final int MILLISECOND=32;
    public static final int MIN=33;
    public static final int MINUS=34;
    public static final int MINUTE=35;
    public static final int MULT=36;
    public static final int NAME=37;
    public static final int NEWLINE=38;
    public static final int NONCONTROL_CHAR=39;
    public static final int NOTSIGN=40;
    public static final int NUMBER=41;
    public static final int PARTITION_CONTIGUITY=42;
    public static final int PATTERN=43;
    public static final int PLUS=44;
    public static final int POINT=45;
    public static final int RBRACKET=46;
    public static final int RETURN=47;
    public static final int RIGHTCURLY=48;
    public static final int SECOND=49;
    public static final int SEQ=50;
    public static final int SINGLEEQUALS=51;
    public static final int SKIP_TILL_ANY_MATCH=52;
    public static final int SKIP_TILL_NEXT_MATCH=53;
    public static final int SPACE=54;
    public static final int STREAM=55;
    public static final int STRICT_CONTIGUITY=56;
    public static final int STRING_LITERAL=57;
    public static final int SUM=58;
    public static final int TRUE=59;
    public static final int UPPER=60;
    public static final int VIEW=61;
    public static final int WEEK=62;
    public static final int WHERE=63;
    public static final int WHITESPACE=64;
    public static final int WITHIN=65;
    public static final int AGGREGATION=66;
    public static final int ASSIGNMENT=67;
    public static final int ATTRIBUTE=68;
    public static final int COMPAREEXPRESSION=69;
    public static final int CREATEVIEW=70;
    public static final int CURRENT=71;
    public static final int ENDSAT=72;
    public static final int FIRST=73;
    public static final int IDEXPRESSION=74;
    public static final int KATTRIBUTE=75;
    public static final int KMEMBER=76;
    public static final int KSTATE=77;
    public static final int KTYPE=78;
    public static final int MATHEXPRESSION=79;
    public static final int MEMBER=80;
    public static final int NOT=81;
    public static final int PARAMLIST=82;
    public static final int PREV=83;
    public static final int QUERY=84;
    public static final int STATE=85;
    public static final int TERM=86;
    public static final int TYPE=87;
    public static final int WHEREEXPRESSION=88;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public SaseParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public SaseParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return SaseParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g"; }


    public static class start_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start"
    // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:61:1: start : ( createStmt | queryStmt );
    public final SaseParser.start_return start() throws RecognitionException {
        SaseParser.start_return retval = new SaseParser.start_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        SaseParser.createStmt_return createStmt1 =null;

        SaseParser.queryStmt_return queryStmt2 =null;



        try {
            // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:61:8: ( createStmt | queryStmt )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==CREATE) ) {
                alt1=1;
            }
            else if ( (LA1_0==PATTERN) ) {
                alt1=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }
            switch (alt1) {
                case 1 :
                    // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:61:10: createStmt
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_createStmt_in_start158);
                    createStmt1=createStmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, createStmt1.getTree());

                    }
                    break;
                case 2 :
                    // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:62:4: queryStmt
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_queryStmt_in_start164);
                    queryStmt2=queryStmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, queryStmt2.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch(RecognitionException e){
          throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "start"


    public static class createStmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "createStmt"
    // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:65:1: createStmt : CREATE VIEW NAME queryStmt -> ^( CREATEVIEW NAME queryStmt ) ;
    public final SaseParser.createStmt_return createStmt() throws RecognitionException {
        SaseParser.createStmt_return retval = new SaseParser.createStmt_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token CREATE3=null;
        Token VIEW4=null;
        Token NAME5=null;
        SaseParser.queryStmt_return queryStmt6 =null;


        CommonTree CREATE3_tree=null;
        CommonTree VIEW4_tree=null;
        CommonTree NAME5_tree=null;
        RewriteRuleTokenStream stream_CREATE=new RewriteRuleTokenStream(adaptor,"token CREATE");
        RewriteRuleTokenStream stream_NAME=new RewriteRuleTokenStream(adaptor,"token NAME");
        RewriteRuleTokenStream stream_VIEW=new RewriteRuleTokenStream(adaptor,"token VIEW");
        RewriteRuleSubtreeStream stream_queryStmt=new RewriteRuleSubtreeStream(adaptor,"rule queryStmt");
        try {
            // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:66:2: ( CREATE VIEW NAME queryStmt -> ^( CREATEVIEW NAME queryStmt ) )
            // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:66:4: CREATE VIEW NAME queryStmt
            {
            CREATE3=(Token)match(input,CREATE,FOLLOW_CREATE_in_createStmt174); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_CREATE.add(CREATE3);


            VIEW4=(Token)match(input,VIEW,FOLLOW_VIEW_in_createStmt176); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_VIEW.add(VIEW4);


            NAME5=(Token)match(input,NAME,FOLLOW_NAME_in_createStmt178); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_NAME.add(NAME5);


            pushFollow(FOLLOW_queryStmt_in_createStmt180);
            queryStmt6=queryStmt();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_queryStmt.add(queryStmt6.getTree());

            // AST REWRITE
            // elements: NAME, queryStmt
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 66:31: -> ^( CREATEVIEW NAME queryStmt )
            {
                // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:66:34: ^( CREATEVIEW NAME queryStmt )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(CREATEVIEW, "CREATEVIEW")
                , root_1);

                adaptor.addChild(root_1, 
                stream_NAME.nextNode()
                );

                adaptor.addChild(root_1, stream_queryStmt.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch(RecognitionException e){
          throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "createStmt"


    public static class queryStmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "queryStmt"
    // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:69:1: queryStmt : patternPart ( wherePart )? ( withinPart )? ( endsAtPart )? returnPart -> ^( QUERY patternPart ( wherePart )? ( withinPart )? ( endsAtPart )? returnPart ) ;
    public final SaseParser.queryStmt_return queryStmt() throws RecognitionException {
        SaseParser.queryStmt_return retval = new SaseParser.queryStmt_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        SaseParser.patternPart_return patternPart7 =null;

        SaseParser.wherePart_return wherePart8 =null;

        SaseParser.withinPart_return withinPart9 =null;

        SaseParser.endsAtPart_return endsAtPart10 =null;

        SaseParser.returnPart_return returnPart11 =null;


        RewriteRuleSubtreeStream stream_patternPart=new RewriteRuleSubtreeStream(adaptor,"rule patternPart");
        RewriteRuleSubtreeStream stream_returnPart=new RewriteRuleSubtreeStream(adaptor,"rule returnPart");
        RewriteRuleSubtreeStream stream_withinPart=new RewriteRuleSubtreeStream(adaptor,"rule withinPart");
        RewriteRuleSubtreeStream stream_wherePart=new RewriteRuleSubtreeStream(adaptor,"rule wherePart");
        RewriteRuleSubtreeStream stream_endsAtPart=new RewriteRuleSubtreeStream(adaptor,"rule endsAtPart");
        try {
            // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:69:10: ( patternPart ( wherePart )? ( withinPart )? ( endsAtPart )? returnPart -> ^( QUERY patternPart ( wherePart )? ( withinPart )? ( endsAtPart )? returnPart ) )
            // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:69:13: patternPart ( wherePart )? ( withinPart )? ( endsAtPart )? returnPart
            {
            pushFollow(FOLLOW_patternPart_in_queryStmt200);
            patternPart7=patternPart();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_patternPart.add(patternPart7.getTree());

            // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:69:25: ( wherePart )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==WHERE) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:69:25: wherePart
                    {
                    pushFollow(FOLLOW_wherePart_in_queryStmt202);
                    wherePart8=wherePart();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_wherePart.add(wherePart8.getTree());

                    }
                    break;

            }


            // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:69:36: ( withinPart )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==WITHIN) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:69:36: withinPart
                    {
                    pushFollow(FOLLOW_withinPart_in_queryStmt205);
                    withinPart9=withinPart();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_withinPart.add(withinPart9.getTree());

                    }
                    break;

            }


            // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:69:48: ( endsAtPart )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ENDS) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:69:48: endsAtPart
                    {
                    pushFollow(FOLLOW_endsAtPart_in_queryStmt208);
                    endsAtPart10=endsAtPart();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_endsAtPart.add(endsAtPart10.getTree());

                    }
                    break;

            }


            pushFollow(FOLLOW_returnPart_in_queryStmt211);
            returnPart11=returnPart();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_returnPart.add(returnPart11.getTree());

            // AST REWRITE
            // elements: returnPart, patternPart, withinPart, wherePart, endsAtPart
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 69:71: -> ^( QUERY patternPart ( wherePart )? ( withinPart )? ( endsAtPart )? returnPart )
            {
                // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:69:74: ^( QUERY patternPart ( wherePart )? ( withinPart )? ( endsAtPart )? returnPart )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(QUERY, "QUERY")
                , root_1);

                adaptor.addChild(root_1, stream_patternPart.nextTree());

                // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:69:94: ( wherePart )?
                if ( stream_wherePart.hasNext() ) {
                    adaptor.addChild(root_1, stream_wherePart.nextTree());

                }
                stream_wherePart.reset();

                // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:69:105: ( withinPart )?
                if ( stream_withinPart.hasNext() ) {
                    adaptor.addChild(root_1, stream_withinPart.nextTree());

                }
                stream_withinPart.reset();

                // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:69:117: ( endsAtPart )?
                if ( stream_endsAtPart.hasNext() ) {
                    adaptor.addChild(root_1, stream_endsAtPart.nextTree());

                }
                stream_endsAtPart.reset();

                adaptor.addChild(root_1, stream_returnPart.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch(RecognitionException e){
          throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "queryStmt"


    public static class withinPart_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "withinPart"
    // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:73:1: withinPart : WITHIN NUMBER ( timeunit )? -> ^( WITHIN NUMBER ( timeunit )? ) ;
    public final SaseParser.withinPart_return withinPart() throws RecognitionException {
        SaseParser.withinPart_return retval = new SaseParser.withinPart_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token WITHIN12=null;
        Token NUMBER13=null;
        SaseParser.timeunit_return timeunit14 =null;


        CommonTree WITHIN12_tree=null;
        CommonTree NUMBER13_tree=null;
        RewriteRuleTokenStream stream_WITHIN=new RewriteRuleTokenStream(adaptor,"token WITHIN");
        RewriteRuleTokenStream stream_NUMBER=new RewriteRuleTokenStream(adaptor,"token NUMBER");
        RewriteRuleSubtreeStream stream_timeunit=new RewriteRuleSubtreeStream(adaptor,"rule timeunit");
        try {
            // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:74:2: ( WITHIN NUMBER ( timeunit )? -> ^( WITHIN NUMBER ( timeunit )? ) )
            // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:74:4: WITHIN NUMBER ( timeunit )?
            {
            WITHIN12=(Token)match(input,WITHIN,FOLLOW_WITHIN_in_withinPart245); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_WITHIN.add(WITHIN12);


            NUMBER13=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_withinPart247); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_NUMBER.add(NUMBER13);


            // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:74:18: ( timeunit )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==DAY||LA5_0==HOUR||LA5_0==MILLISECOND||LA5_0==MINUTE||LA5_0==SECOND||LA5_0==WEEK) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:74:18: timeunit
                    {
                    pushFollow(FOLLOW_timeunit_in_withinPart249);
                    timeunit14=timeunit();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_timeunit.add(timeunit14.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: timeunit, NUMBER, WITHIN
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 74:28: -> ^( WITHIN NUMBER ( timeunit )? )
            {
                // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:74:31: ^( WITHIN NUMBER ( timeunit )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_WITHIN.nextNode()
                , root_1);

                adaptor.addChild(root_1, 
                stream_NUMBER.nextNode()
                );

                // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:74:47: ( timeunit )?
                if ( stream_timeunit.hasNext() ) {
                    adaptor.addChild(root_1, stream_timeunit.nextTree());

                }
                stream_timeunit.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch(RecognitionException e){
          throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "withinPart"


    public static class endsAtPart_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "endsAtPart"
    // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:77:1: endsAtPart : ENDS AT attributeTerm -> ^( ENDSAT attributeTerm ) ;
    public final SaseParser.endsAtPart_return endsAtPart() throws RecognitionException {
        SaseParser.endsAtPart_return retval = new SaseParser.endsAtPart_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token ENDS15=null;
        Token AT16=null;
        SaseParser.attributeTerm_return attributeTerm17 =null;


        CommonTree ENDS15_tree=null;
        CommonTree AT16_tree=null;
        RewriteRuleTokenStream stream_AT=new RewriteRuleTokenStream(adaptor,"token AT");
        RewriteRuleTokenStream stream_ENDS=new RewriteRuleTokenStream(adaptor,"token ENDS");
        RewriteRuleSubtreeStream stream_attributeTerm=new RewriteRuleSubtreeStream(adaptor,"rule attributeTerm");
        try {
            // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:78:3: ( ENDS AT attributeTerm -> ^( ENDSAT attributeTerm ) )
            // C:\\odysseus\\cep\\cep.sase\\src\\de\\uniol\\inf\\is\\odysseus\\cep\\sase\\SaseParser.g:78:5: ENDS AT attributeTerm
            {
            ENDS15=(Token)match(input,ENDS,FOLLOW_ENDS_in_endsAtPart274); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ENDS.add(ENDS15);


            AT16=(Token)match(input,AT,FOLLOW_AT_in_endsAtPart276); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_AT.add(AT16);


